--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col">
                     <h3>Our Campsites</h3>
-                    <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+                    <p class="d-none d-sm-block"> Explore our growing database of curated campsites and leave your own reviews! </p>
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col">
                     <h3>React Lake Campground</h3>
-                    <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                    <p class="d-none d-sm-block"> Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers. </p>
                 </div>
             </div>
 
@@ -71,12 +71,12 @@
                 </div>
                 <div class="col">
                     <h3>Bootstrap Outfitters</h3>
-                    <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                    <p class="d-none d-sm-block"> Bootstrap Outfitters supplies you with gear you need at prices you can't beat. </p>
                 </div>
             </div>
         </div>  
 
-    <footer>
+    <footer class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
