--- a/aboutus.html
+++ b/aboutus.html
@@ -23,20 +23,24 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <h1>NuCamp</h1>
-                    <h2>a better way to camp</h2>
-                </div>
-            </div> 
-        </div>
-    </header>
-
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-        <div class="container">
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <a href="index.html"><img src="img/logo.png" class="img-fluid" /></a>
+                 </div>
+                 <div class="col">
+                     <h1>NuCamp</h1>
+                     <h2>a better way to camp</h2>
+                 </div>
+             </div>
+         </div>
+     </header>
+ 
+     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+         <div class="container">
+             <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <spam class="navbar-toggler-icon"></spam>
             </button>
-            <div class="collapse navbar-collapse" id="nucampnavbar">
+            <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>Home</a></li>
                     <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i>About</a></li>
@@ -103,6 +107,43 @@
                 <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
                 <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
                 <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-sm-9">
+                <h2> Facts &amp; Figures </h2>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr class="bg-primary text-light">
+                                <th></th>
+                                <th> 2016 </th>
+                                <th> 2017 </th>
+                                <th> 2018 </th>
+                            </tr>
+                        </thead>
+                        <tbody class="table-primary">
+                            <tr>
+                                <th> Staff Wilderness Experts </th>
+                                <td> 10 </td>
+                                <td> 20 </td>
+                                <td> 40 </td>
+                            </tr>
+                            <tr> 
+                                <th> New Campers </th>
+                                <td> 256 </td>
+                                <td> 1,200 </td>
+                                <td> 5,360 </td>
+                            </tr>
+                            <tr>
+                                <th> Square Miles Covered </th>
+                                <td> 101,325 </td>
+                                <td> 423,000 </td>
+                                <td> ~3,000,000,000 </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
