--- a/index.html
+++ b/index.html
@@ -71,8 +71,13 @@
                     <h2>Featured Campsites</h2>
                 </div>
                 <div class="col">
-                    <h3>React Lake Campground</h3>
-                    <p class="d-none d-sm-block"> Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers. </p>
+                    <div class="media">
+                        <div class="media-body align-items-center">
+                            <h3>React Lake Campground</h3>
+                            <p class="d-none d-sm-block"> Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers. </p>
+                        </div>
+                        <img class="d-flex ml-3 img-thumbnail" src="img/react-lake-thumb.jpg" alt="react-lake-thumb" />
+                    </div>
                 </div>
             </div>
 
@@ -86,6 +91,42 @@
                         <div class="media-body align-items-center">
                             <h3>Bootstrap Outfitters</h3>
                             <p class="d-none d-sm-block"> Bootstrap Outfitters supplies you with gear you need at prices you can't beat. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-content align-items-center">
+                <div class="col-sm-6 mx-auto">
+                    <div class="card">
+                        <h3 class="card-header bg-info text-white"> Reserve a Campsite </h3>
+                        <div class="card-body ">
+                            <form>
+                                <div class="row">
+                                    <label class="col-sm-6 col-form-label form-group"> Number of Campers </label>
+                                    <div class="col">
+                                        <select class="col form-control" name="numCampers" id="numCampers"> 
+                                            <option selected> Select... </option>
+                                            <option value="1"> 1 </option>
+                                            <option value="2"> 2 </option>
+                                            <option value="3"> 3 </option>
+                                            <option value="4"> 4 </option>
+                                            <option value="5"> 5 </option>
+                                            <option value="6"> 6 </option>
+                                        </select>    
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <label for="date" class="col-sm-6"> Date </label>
+                                    <div class="col-sm-6">
+                                        <input class="col form-control" type="date" id="date" name="date" placeholder=""> 
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <button class="btn btn-primary" type="submit"> Search </button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
