--- a/aboutus.html
+++ b/aboutus.html
@@ -69,7 +69,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card">
-                    <h3 class="card-header bg-primary text-white"> Facts At a Glance </h3>
+                    <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
                     <div class="card-body">
                         <dl class="row">
                             <dt class="col-6"> Founded </dt>
@@ -87,9 +87,9 @@
             <div class="col">
                 <div class="card bg-light mt-3">
                     <blockquote class="blockquote card-body">
-                        <p class="mb-0"> I will not follow where the path may lead, but I will go where there is no path, and I will leave a trail. </p>
+                        <p class="mb-0">I will not follow where the path may lead, but I will go where there is no path, and I will leave a trail.</p>
                         <footer class="blockquote-footer"> Muriel Strode, 
-                            <cite title="Source Title"> "Wind-Wafted Wild Flowers" - The Open Court, 1903 </cite>
+                            <cite title="Source Title">"Wind-Wafted Wild Flowers" - The Open Court, 1903</cite>
                         </footer>
                     </blockquote>
                 </div>
@@ -99,14 +99,64 @@
         <div class="row row-content">
             <div class="col">
                 <h3>Community Partners</h3>
-                <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
-                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
-                <h4>Git Out Expeditions <small>Group Adventure Expeditions</small></h4>
-                <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
-                <h4>Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small></h4>
-                <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
-                <h4>Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small></h4>
-                <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                <div id="accordion">
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h4>
+                                <a data-toggle="collapse" data-target="#bootstrap">
+                                    Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
+                                </a>
+                            </h4>
+                            <div class="collapse show" id="bootstrap" data-parent="#accordion">
+                                <div class="card-holder">
+                                    <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h4>
+                                <a class="collapsed" data-toggle="collapse" data-target="#git">
+                                    Git Out Expeditions <small>Group Adventure Expeditions</small>
+                                </a>
+                            </h4>
+                            <div class="collapse" id="git" data-parent="#accordion">
+                                <div class="card-holder">
+                                    <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h4>
+                                <a class="collapsed" data-toggle="collapse" data-target="#mongo">
+                                    Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
+                                </a>
+                            </h4>
+                            <div class="collapse" id="mongo" data-parent="#accordion">
+                                <div class="card-header">
+                                    <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class="card">
+                        <div role="tab" class="card-header">
+                            <h4>
+                                <a class="collapsed" data-toggle="collapse" data-target="#node">
+                                    Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
+                                </a>
+                            </h4>
+                            <div class="collapse" id="node" data-parent="#accordion">
+                                <div class="card-holder">
+                                    <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row row-content">
