--- a/test.html
+++ b/test.html
@@ -1,16 +1,140 @@
-<form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags always come first -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+  <!-- Additional CSS must be placed after Bootstrap CSS -->
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+  <link rel="stylesheet" href="css/styles.css" />
+
+  <title>NuCamp: A Better Way To Camp</title>
+
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="nucampNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i>Home</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i>Site</a></li>
+          <li class="nav-item"><a class="nav-link" href="contactus.html"><i
+                class="fa fa-address-card fa-lg"></i>Contact</a></li>
+        </ul>
+        <span class="navbar-text ml-auto">
+          <a role="button" data-toggle="modal" data-target="#loginModal">
+            <i class="fa fa-sign-in"></i>Login
+          </a>
+        </span>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
+  </nav>
+
+  <div id="loginModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-reserve-campsite">
+          <h3 class="modal-title bg-info text-white">Reserve a Campsite</h3>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <div class="modal-body">
+          <div class="container-fluid">
+            <form id="reserveForm">
+              <div class="row form-group">
+                <label class="col-sm-6 col-form-label">Number of Campers</label>
+                <div class="col">
+                  <select class="col form-control" name="numCampers" id="numCampers">
+                    <option selected> Select... </option>
+                    <option value="1"> 1 </option>
+                    <option value="2"> 2 </option>
+                    <option value="3"> 3 </option>
+                    <option value="4"> 4 </option>
+                    <option value="5"> 5 </option>
+                    <option value="6"> 6 </option>
+                  </select>
+                </div>
+              </div>
+              <div class="row form-group">
+                <label for="date" class="col-sm-6 col-form-label">Date</label>
+                <div class="col-sm-6">
+                  <input class="col form-control" type="date" id="date" name="date">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <button class="btn btn-primary" type="cancel">Cancel</button>
+                  <button class="btn btn-primary" type="submit">Search</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+
+  <div class="row row-content align-items-center">
+    <div class="col-sm-6 mx-auto">
+      <div class="card">
+        <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+        <div class="card-body">
+          <form id="reserveForm">
+            <div class="row form-group">
+              <label class="col-sm-6 col-form-label">Number of Campers</label>
+              <div class="col">
+                <select class="col form-control" name="numCampers" id="numCampers">
+                  <option selected> Select... </option>
+                  <option value="1"> 1 </option>
+                  <option value="2"> 2 </option>
+                  <option value="3"> 3 </option>
+                  <option value="4"> 4 </option>
+                  <option value="5"> 5 </option>
+                  <option value="6"> 6 </option>
+                </select>
+              </div>
+            </div>
+            <div class="row form-group">
+              <label for="date" class="col-sm-6 col-form-label">Date</label>
+              <div class="col-sm-6">
+                <input class="col form-control" type="date" id="date" name="date">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <button class="btn btn-primary" type="cancel">Cancel</button>
+                <button class="btn btn-primary" type="submit">Search</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+  </div>
+
+  <footer>
+
+  </footer>
+
+  <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
