Bootstrap Project Setup

--- a/aboutus.html
+++ b/aboutus.html
@@ -136,7 +136,7 @@
                                 </a>
                             </h4>
                             <div class="collapse" id="mongo" data-parent="#accordion">
-                                <div class="card-header">
+                                <div class="card-holder">
                                     <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
                                 </div>
                             </div>
