--- a/index.html
+++ b/index.html
@@ -68,9 +68,23 @@
                                     <input class="col form-control" type="date" id="date" name="date">
                                 </div>
                             </div>
+                            <div class="row form-group">
+                                <label class="col-sm-6 col-form-label">Campsite Type</label>
+                                <div class="col-2">
+                                  <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success">
+                                      <input type="radio" name="siteType" id="siteTent"> Tent
+                                    </label>
+                                    <label class="btn btn-primary">
+                                      <input type="radio" name="siteType" id="siteRV"> RV
+                                    </label>
+                                  </div>
+                                </div>
+                              </div>
+                          </div>
                             <div class="row">
                                 <div class="col">
-                                    <button class="btn btn-primary" type="cancel">Cancel</button>
+                                    <button class="btn btn-secondary" type="cancel">Cancel</button>
                                     <button class="btn btn-primary" type="submit">Search</button>
                                 </div>
                             </div>
