--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-reserve-campsite">
-                    <h3 class="modal-title bg-info text-white">Reserve a Campsite</h3>
+                <div class="modal-header bg-info text-white">
+                    <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
@@ -71,17 +71,16 @@
                             <div class="row form-group">
                                 <label class="col-sm-6 col-form-label">Campsite Type</label>
                                 <div class="col-2">
-                                  <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-success">
-                                      <input type="radio" name="siteType" id="siteTent"> Tent
-                                    </label>
-                                    <label class="btn btn-primary">
-                                      <input type="radio" name="siteType" id="siteRV"> RV
-                                    </label>
-                                  </div>
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success">
+                                        <input type="radio" name="siteType" id="siteTent"> Tent
+                                        </label>
+                                        <label class="btn btn-primary">
+                                        <input type="radio" name="siteType" id="siteRV"> RV
+                                        </label>
+                                    </div>
                                 </div>
-                              </div>
-                          </div>
+                            </div>
                             <div class="row">
                                 <div class="col">
                                     <button class="btn btn-secondary" type="cancel">Cancel</button>
