--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col-md-4 col-xl-2 mt-4">
-                    <a class="btn btn-info btn-lg text-nowrap" role="button" data-toggle="modal"
-                        data-target="#reserveModal">Reserve Campsite</a>
+                    <a class="btn btn-info btn-lg text-nowrap" role="button" id="reserveButton">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -111,7 +110,7 @@
                                 class="fa fa-address-card fa-lg"></i>Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal">
+                    <a role="button" id="loginButton">
                         <i class="fa fa-sign-in"></i>Login
                     </a>
                 </span>
@@ -126,7 +125,6 @@
                     <h3 class="modal-title">Login</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-
                 <div class="modal-body">
                     <div class="container-fluid">
                         <form>
@@ -155,7 +153,6 @@
                             </div>
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -303,6 +300,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
      <!-- endbuild -->
+
 
 </body>
 
